// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default text input 1`] = `
<b-input name="a" placeholder="Input Placeholder" type="text">
  <b-input-text placeholder="Input Placeholder" type="text">
    <input type="text" placeholder="Input Placeholder">
    <b-input-text--border></b-input-text--border>
  </b-input-text>
</b-input>
`;

exports[`Filled input 1`] = `
<b-input name="c" value="Example Value" label="Input Label" type="text">
  <b-input-text value="Example Value" label="Input Label" type="text">
    <input value="Example Value" type="text">
    <b-input-text--border></b-input-text--border>
    <b-input-text--label>Input Label</b-input-text--label>
  </b-input-text>
</b-input>
`;

exports[`Floating label input 1`] = `
<b-input name="b" label="Floating Label" type="text">
  <b-input-text label="Floating Label" type="text">
    <input type="text">
    <b-input-text--border></b-input-text--border>
    <b-input-text--label>Floating Label</b-input-text--label>
  </b-input-text>
</b-input>
`;

exports[`Input error 1`] = `
<b-input name="d" value="Example Value" label="Input Label" error="some input error"
type="text">
  <b-input-text value="Example Value" label="Input Label" error="some input error"
  type="text">
    <input value="Example Value" type="text">
    <b-input-text--border></b-input-text--border>
    <b-input-text--label>Input Label</b-input-text--label>
  </b-input-text>
</b-input>
`;
